[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/art/spritesheet.png" type="Texture" id=1]
[ext_resource path="res://ui/font_small.tres" type="DynamicFont" id=2]
[ext_resource path="res://game_screen/meeting_request.gd" type="Script" id=3]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform vec4 tint : hint_color = vec4(1);

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	COLOR = color * tint;
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/tint = Color( 1, 1, 1, 1 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 9, 9 )

[node name="MeetingRequest" type="MarginContainer"]
margin_right = 92.0
margin_bottom = 32.0
custom_constants/margin_right = 0
script = ExtResource( 3 )

[node name="Background" type="NinePatchRect" parent="."]
material = SubResource( 3 )
margin_right = 92.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 16, 16 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 92.0
margin_bottom = 32.0
mouse_filter = 1
custom_constants/margin_right = 2
custom_constants/margin_top = 0
custom_constants/margin_left = 2
custom_constants/margin_bottom = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 2.0
margin_right = 90.0
margin_bottom = 31.0

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 88.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Meeting Title"
clip_text = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 17.0
margin_right = 88.0
margin_bottom = 30.0

[node name="DurationLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 75.0
margin_bottom = 13.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "1hr"
clip_text = true

[node name="Icon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 79.0
margin_right = 88.0
margin_bottom = 13.0
texture = SubResource( 1 )
stretch_mode = 4

[connection signal="gui_input" from="." to="." method="_on_MeetingRequest_gui_input"]
